# mscodebase-intelligence

./: .agent_handoff.md  .env  .env.example  .gitignore  .zed.settings.json.example  AGENTS.md  AGENT_DIARY.md  AI_INSTALLATION_PROMPT.md  AI_PROMPT.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CONTRIBUTING.zh.md  DEV EXP.md  DEV_DIARY.md  EXPERIMENTS_LOG.md  FIX_SUMMARY.md  INTELLIGENCE_LAYER_STATUS.md  INTELLIGENCE_LAYER_TEST_REPORT.md  KNOWN_ISSUES.md  LICENSE  LSP_SETUP.md  MANIFEST.in  PROJECT_DOCS.md  QUICKSTART.md  README.md  README.ru.md  README.zh.md  SECURITY.en.md  SECURITY.md  SECURITY.zh.md  TESTING.md  VISION.md  ZED_CONFIG_FIX_SUMMARY.md  ZED_WINDOWS_QUIRKS.en.md  (+45 more)
.agents/: AI_USAGE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
.locks/: .gitkeep
.mscodebase/: incidents.json
.zed/: mcp_settings.json  settings.json
MSCodeBase/: config.json  mcp_tool_demo_results.json  test_bugs.py  test_simple.py
MSCodeBase/src/: buggy_code.py  main_app.py
docs/: ANALYSIS_4_PROJECTS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT_MCP_vs_IDE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  FAQ.en.md  FAQ.ru.md  FAQ.zh.md  HANDFOFF_TO_AI_AGENT.en.md  HANDFOFF_TO_AI_AGENT.md  HANDFOFF_TO_AI_AGENT.zh.md  INSTALL.en.md  INSTALL.md  INSTALL.zh.md  INTELLIGENCE_LAYER.md  KNOWN_ISSUES.md  SANATION_REPORT.md  architecture-layers.md  architecture-layers.ru.md  architecture-layers.zh.md  architecture.md  architecture.ru.md  architecture.zh.md  measurement-plan.md  telemetry.en.md  telemetry.md  telemetry.zh.md  windows-setup.md
docs/ISSUES/: modification_guard_gaps.md
docs/archive/: AGENTS.md_before_48_and_audit_20260722_215808.md
docs/blog/: pagerank-codebase-myth.md  silent-vector-contamination.md  token-type-ids-60x-slowdown.md  zed-threads-db-reverse-engineering.md
docs/en/: ARCHITECTURE.md  ARCHITECTURE_DEEP.md  ARCHITECTURE_LAYERS.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GRACEFUL_DEGRADATION.md  HANDFOFF.md  INSTALL.md  INSTALL_MODELS.md  LM_STUDIO_SETUP.md  SEARCH_PIPELINE.md  SECURITY.md  SYSTEM_REQUIREMENTS.md  TELEMETRY.md  ZED_WINDOWS_QUIRKS.md
docs/investigations/: 2026-07-05-active-workspace-resolution.md  2026-07-05-active-workspace-resolution.zh.md  2026-07-05-lsp-zed-1.9.0.md  2026-07-05-lsp-zed-1.9.0.zh.md
docs/research/: 2026-07-09-comprehensive-investigation.md  2026-07-09-final-report.md  2026-07-09-model-comparison.md  2026-07-09-provider-benchmark.md  2026-07-10-final-benchmark.md  2026-07-11-lsp-hybrid-integration.md  2026-07-11-zed-deep-dive.md  (+7 more)
experiments/: e2e_results_v2.json  embed_bench_local.py  evaluate_root_cause.py  fts5_search.py  gold_standard.py  gold_validation.json  mmr_prototype.py  run_experiment_compiler.py  run_experiment_compiler_v2.py  run_experiment_e2e.py  run_experiment_e2e_compare.py  run_experiment_e2e_v2.py  run_experiment_fts5.py  run_experiment_smart_summary.py  run_experiment_treesitter.py  run_experiment_v2.py  run_experiment_v3.py  run_experiment_v4.py  run_experiment_v5.py  treesitter_parser.py  validate_gold.py
extension/: Cargo.toml
extension/src/: lib.rs
extensions/mscodebase-status/: Cargo.toml  README.md  extension.toml  extension.wasm
extensions/mscodebase-status/src/: lib.rs
installers/: build.py  install.bat  install.sh
locales/: en.json  ru.json  zh.json
scripts/: _fill_translations.py  _push.py  architecture_linter.py  ast_sanitize.py  audit_i18n.py  backfill_chunk_hash.py  benchmark_docs_weight.py  benchmark_embed.py  benchmark_load_test.py  benchmark_ov_concurrent.py  benchmark_search_stages.py  bump_version.py  check_docstrings.py  check_lsp_health.py  collect_telemetry.py  comprehensive_benchmark.py  dataflow_experiment.py  db_health.py  debug_guard.py  diagnose.py  diagnose_ort.py  download_model.py  dump_pid_env.py  dump_running_mcp.py  experiment_embed.py  fix_insider_now.py  fix_zed_settings.bat  fix_zed_settings.sh  full_benchmark.py  full_index.py  full_reindex.py  live_search_audit.py  monitor.py  nncf_requantize.py  patch_dll_imports.py  patch_zed_settings.py  reindex_mscodebase.py  reranker_load_test.py  run_experiment_pagerank.py  run_install.bat  (+7 more)
src/: __init__.py  hybrid_server.py  lsp_main.py  main.py
telemetry/: tool_metrics.json
tests/: benchmark_agentic_search.py  conftest.py  demo_mcp_tools.py  final_mcp_demo.py  final_mcp_demonstration.py  mcp_tool_demo_simple.py  mcp_tool_demonstration.py  mcp_tool_demonstration_final.py  simple_demo.py  test_agentic_search.py  test_architecture_lifecycle.py  test_assignments.py  test_ast_cache_invalidation.py  test_branch_aware_index.py  test_bug_correlation.py  test_chunk_cache.py  test_commit_memory.py  test_comprehensive.py  test_connection.py  test_contradiction_ledger.py  test_cross_project_deps.py  test_cross_repo_search.py  test_cypher_engine.py  test_deep_search.py  test_di_container.py  test_edges_stored.py  test_embedder.py  test_error_handler.py  test_execution_contract.py  test_file_exists.py  test_fts5_integration.py  test_graph_rag.py  test_health_report.py  test_idle_reload.py  test_index_guard.py  test_index_progress.py  test_index_timeline.py  test_indexer_fts5_sync.py  test_indexer_project_path.py  test_install_embedder_sync.py  (+44 more)
tools/: fix_arch_ru.py  monitor_zed_memory.ps1
(+219 files in other folders)
